--- a/frontend1/package.json
+++ b/frontend1/package.json
@@ -26,7 +26,8 @@
     "tailwind-merge": "^3.4.1",
     "three-spritetext": "^1.10.0",
     "viem": "^2.46.2",
-    "wagmi": "^2.19.5"
+    "wagmi": "^2.19.5",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
